backups/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.19.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: openresty/openresty:alpine
        name: nginx
        ports:
        - containerPort: 81
        resources: {}
        volumeMounts:
        - mountPath: /var/www/toirus-srv
          name: nginx-hostpath0
        - mountPath: /etc/nginx/conf.d
          name: nginx-hostpath1
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /Users/mac/work/toirus-srv
        name: nginx-hostpath0
      - hostPath:
          path: /Users/mac/work/docker/conf/nginx
        name: nginx-hostpath1
status: {}
