backups/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
 type: NodePort
 #externalIPs:
 #  - 192.168.2.24
 ports: 
 - name: http
   port: 81
   targetPort: 81
   #nodePort: 30036
   protocol: TCP
 selector:
   app: nginx
